# vasterm

./: .gitignore  .tbdflow.yml  Cargo.toml  LICENSE  README.md
docs/: vasterm-idea.md
